# Platform-Engineering-Demo

./: README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  main_platform-engineering-code-demo.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
infra/: main.bicep  resources.bicep
specs/: openapi.yaml
specs/001-this-application-is/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-this-application-is/checklists/: requirements.md
specs/001-this-application-is/contracts/: openapi.additions.yaml
src/app/: main.py
src/domain/: lifecycle.py  models.py  store.py
tests/contract/: test_openapi_spec.py  test_provisioning_contract.py
tests/unit/: test_health.py
